objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>Custom alerts information for TCP users</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NOT-{0000}</displayFormat>
        <label>Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>