objects/Notification__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to whom the alert has been assigned</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>