objects/Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The detailed description of the Alert created for the user</description>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>