objects/Notification__c/fields/ReadDate__c.field-meta.xml
<CustomField>
    <fullName>ReadDate__c</fullName>
    <description>Date when the alert was read by the user</description>
    <label>Read Date</label>
    <type>Date</type>
</CustomField>