objects/Notification__c/fields/ReadStatus__c.field-meta.xml
<CustomField>
    <fullName>ReadStatus__c</fullName>
    <description>Used to track whether the user has read the alert or not</description>
    <label>Read Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Unread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>