objects/Notification__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>Salesforce Id of the record associated with the alert</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>