objects/Notification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The Subject of the alert</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>